# Mill

./: Cargo.toml  README.md  schlachtplan.md
benches/: criterion_benchmarks.rs
src/: .rustfmt.toml  coordination.rs  lib.rs  main.rs
src/coordination/: game_phases.rs  setup.rs
src/game/: efficient_state.rs  logic.rs  state.rs
src/game/efficient_state/: de_encode.rs  printing.rs  win_decider.rs
src/game/efficient_state/win_decider/: big_moves.rs  move_simulations.rs  simulations.rs  start_set_generation.rs  tests.rs  unit_tests.rs
src/game/efficient_state/win_decider/move_simulations/: backward.rs  forward.rs
src/game/logic/: game_phases.rs
src/game/logic/game_phases/: early.rs
src/game/state/: painting.rs  printing.rs  representation.rs
